# dataqualityagent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_dq.py  seed_warehouse.py
src/dataqualityagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dqa/anomaly/: detector.py
src/dqa/api/: main.py
src/dqa/connectors/: duckdb_conn.py
src/dqa/dbtgen/: schema_generator.py
src/dqa/profiling/: profiler.py
src/dqa/reporting/: report_writer.py
src/dqa/utils/: config.py
tests/: test_anomaly_detection.py  test_smoke_pipeline.py
